# felix-monitoring

./: Dockerfile  Makefile  docker-compose.yml  felix.json  main.py  pyproject.toml  run_user_monitor.sh
user_monitoring/: __init__.py  circuit_breaker.py  clearinghouse_client.py  config.py  constants.py  coordinator.py  db_manager.py  felix-user-monitor.service  main.py  snapshot_processor.py  testing.py  utils.py  websocket_handler.py
user_monitoring/data/: .snapshot_state.json
user_monitoring/hl/data/: .snapshot_state.json
